# ournote

./: .gitignore  README.md  compose.yaml  dev.sh  pubspec.yaml  pyproject.toml  run_dev.sh
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: cache.py  constants.py  crud.py  dbmodels.py  exceptions.py  main.py  models.py  schemas.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  items.py  login.py  rooms.py  user.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/services/: items.py  rooms.py  user.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_login.py
frontend/: README.md  generate_api.sh  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/ournote/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: globals.dart  main.dart  models.dart  persistence.dart  service.dart
frontend/lib/views/: item.dart  login.dart  room.dart  signup.dart  user.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
